Elm code restructuring and modularisation

--- a/elm/index.html
+++ b/elm/index.html
@@ -42,6 +42,7 @@ thead {
 </style>
 <body>
   <div></div>
+  <script src="https://cdn.rawgit.com/utkarshkukreti/elm-remotedev/master/dist/main.js"></script>
   <script src="elm.js"></script>
   <script>Elm.Main.embed(document.querySelector("div"));</script>
 </body>
