--- a/elm/index.html
+++ b/elm/index.html
@@ -31,6 +31,26 @@ body {
 .attribute.title {
   font-style: italic;
 }
+.folder-list {
+  list-style-type: none;
+  padding-left: 0;
+  margin-left: 0;
+}
+ul.folder-list ul.folder-list {
+    margin-left: 1.4em;
+}
+.folder-head.leaf:before {
+  content: "⯀";
+}
+.folder-head.collapsed:before {
+  content: "⯈";
+}
+.folder-head.expanded:before {
+  content: "⯆";
+}
+.folder-head .folder-name {
+  padding-left: 0.6em;
+}
 /*
 table {
   width: 100%;
