Expand only selected folder

--- a/elm/index.html
+++ b/elm/index.html
@@ -48,6 +48,9 @@ ul.folder-list ul.folder-list {
 .folder-head.expanded:before {
   content: "⯆";
 }
+.folder-head.selected {
+  color: #e81c4f;
+}
 .folder-head .folder-name {
   padding-left: 0.6em;
 }
