--- a/elm/index.html
+++ b/elm/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,‌​100italic,300,300ita‌​lic,400italic,500,50‌​0italic,700,700itali‌​c,900italic,900' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" href="assets/fonts.css">
 <style>
 html {
   box-sizing: border-box;
