--- a/elm/index.html
+++ b/elm/index.html
@@ -103,7 +103,7 @@ thead {
 </style>
 <body>
   <div></div>
-  <script src="https://cdn.rawgit.com/utkarshkukreti/elm-remotedev/master/dist/main.js"></script>
+  <script src="assets/debug/elm-remotedev.js"></script>
   <script src="elm.js"></script>
   <script>Elm.Main.embed(document.querySelector("div"));</script>
 </body>
