Use SVG icons instead of unicode characters

--- a/elm/index.html
+++ b/elm/index.html
@@ -77,29 +77,24 @@ article {
 ul.folder-list ul.folder-list {
     margin-left: 1.4em;
 }
-.folder-head.leaf:before {
-  content: "⯀";
-}
-.folder-head.collapsed:before {
-  content: "⯈";
-}
-.folder-head.expanded:before {
-  content: "⯆";
-}
 .folder-head.selected {
   color: #e81c4f;
 }
 .folder-head .folder-name {
   padding-left: 0.6em;
 }
-/*
-table {
-  width: 100%;
+
+.svg-icon-definitions symbol {
+  stroke-width: 14%;
+  stroke-linejoin: round;
 }
-thead {
-  font-weight: bold;
+.svg-icon {
+  display: inline-block;
+  width: 1.5ex;
+  height: 1.5ex;
+  stroke: currentColor;
+  fill: currentColor;
 }
-*/
 </style>
 <body>
   <div></div>
