Different icon appearance between collactions and directories

--- a/elm/index.html
+++ b/elm/index.html
@@ -95,6 +95,9 @@ ul.folder-list ul.folder-list {
   stroke: currentColor;
   fill: currentColor;
 }
+.directory .svg-icon {
+  fill: transparent;
+}
 </style>
 <body>
   <div></div>
