--- a/elm/index.html
+++ b/elm/index.html
@@ -77,6 +77,10 @@ article {
 ul.folder-list ul.folder-list {
     margin-left: 1.4em;
 }
+
+.folder-head {
+  transition: color .2s;
+}
 .folder-head.selected {
   color: #e81c4f;
 }
