Support different article types: search, collection, details

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -121,6 +121,9 @@ ul.folder-list ul.folder-list {
 .search .error {
   color: #e81c4f;
 }
+.breadcrumbs {
+  font-size: 80%;
+}
 
 </style>
 <body>
