Updated demo page header

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,6 +31,14 @@ header {
   padding-bottom: 1ex;
   /* background-color: #eee; */
 }
+header .title {
+  color: #e81c4f;
+  margin-right: 1.5em;
+  /* font-size: 80%; */
+}
+header .subtitle {
+  font-size: 80%;
+}
 main {
   flex: 1;
   display: flex;
