Query and display document details
using mask "nodebig"

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -115,10 +115,10 @@ ul.folder-list ul.folder-list {
   transform: rotate(90deg);
 }
 
-.search {
+.article {
   position: relative;
 }
-.search .spinner {
+.article .spinner {
   width: 3em;
   position: absolute;
   top: 50%;
@@ -126,11 +126,18 @@ ul.folder-list ul.folder-list {
   transform: translate(-50%, -50%);
 }
 
-.search .error {
+.article .error {
   color: #e81c4f;
 }
 .breadcrumbs {
   font-size: 80%;
+}
+.article .details table {
+  border-collapse: collapse;
+}
+.article .details table td {
+  vertical-align: top;
+  padding: 0.1em;
 }
 
 </style>
