Fix layout of document details

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -137,7 +137,10 @@ ul.folder-list ul.folder-list {
 }
 .article .details table td {
   vertical-align: top;
-  padding: 0.1em;
+  padding: 0.1em 0;
+}
+.article .details table td + td {
+  padding-left: 0.4em;
 }
 
 </style>
