Upgrade code to Elm 0.19
Some references:
https://github.com/elm/compiler/blob/master/upgrade-docs/0.19.md
https://korban.net/posts/elm/2018-08-22-elm-019-whats-new-install-upgrade/

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -158,5 +158,9 @@ ul.folder-list ul.folder-list {
   <div></div>
   <script src="assets/debug/elm-remotedev.js"></script>
   <script src="elm.js"></script>
-  <script>Elm.Main.embed(document.querySelector("div"));</script>
+  <script>
+    Elm.Main.init({
+      node: document.querySelector("div")
+    });
+  </script>
 </body>
