--- a/frontend/assets/index.html
+++ b/frontend/assets/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="fonts.css">
 <link rel="stylesheet" type="text/css" href="app.css">
 <body>
