--- a/frontend/src/assets/index.html
+++ b/frontend/src/assets/index.html
@@ -7,6 +7,10 @@
 
 <body>
   <script>
-    var app = Elm.Main.init();
+    var app = Elm.Main.init({
+      flags: {
+        "navigator.language": navigator.language
+      }
+    });
   </script>
 </body>
