Add language selection widget and save to config

--- a/frontend/src/assets/index.html
+++ b/frontend/src/assets/index.html
@@ -9,7 +9,8 @@
   <script>
     var app = Elm.Main.init({
       flags: {
-        "navigator.language": navigator.language
+        "navigatorLanguageTag": navigator.language,
+        "userSelectedUILanguageTag": localStorage.getItem("selectedUILanguage")
       }
     });
   </script>
