Subscribe to changes of the ui language from other windows

--- a/frontend/src/assets/index.html
+++ b/frontend/src/assets/index.html
@@ -17,5 +17,11 @@
       function (userSelectedUILanguageTag) {
         localStorage.setItem("selectedUILanguage", userSelectedUILanguageTag);
       });
+    window.addEventListener('storage', function (ev) {
+      console.log("StorageEvent: %s %o", ev.newValue, ev);
+      if (ev.key == "selectedUILanguage") {
+        app.ports.changedSelectedUILanguageTag.send(ev.newValue);
+      }
+    });
   </script>
 </body>
