--- a/frontend/src/assets/index.html
+++ b/frontend/src/assets/index.html
@@ -20,7 +20,7 @@
     window.addEventListener('storage', function (ev) {
       console.log("StorageEvent: %s %o", ev.newValue, ev);
       if (ev.key == "selectedUILanguage") {
-        app.ports.jsConfigChangeEvent.send(
+        app.ports.jsConfigChange.send(
           {
             "changedSelectedUILanguageTag": ev.newValue
           }
@@ -29,7 +29,7 @@
     });
     window.addEventListener('languagechange', function () {
       console.log('languagechange event detected! %s', navigator.language);
-      app.ports.jsConfigChangeEvent.send(
+      app.ports.jsConfigChange.send(
         {
           "changedNavigatorLanguageTag": navigator.language
         }
