--- a/frontend/src/assets/index.html
+++ b/frontend/src/assets/index.html
@@ -17,6 +17,13 @@
       function (userSelectedUILanguageTag) {
         localStorage.setItem("selectedUILanguage", userSelectedUILanguageTag);
       });
+      app.ports.scrollElementIntoView.subscribe(
+        function (elementId) {
+          let element = document.getElementById(elementId);
+          if (element) {
+            element.scrollIntoView({ behavior: "smooth", block: "nearest", inline: "start" });
+          }
+        });
     window.addEventListener('storage', function (ev) {
       if (ev.key == "selectedUILanguage") {
         app.ports.jsConfigChange.send(
