--- a/backend/src/content/hsb-yearbook-en.html
+++ b/backend/src/content/hsb-yearbook-en.html
@@ -26,25 +26,25 @@
     </style>
     <h1>Yearbook 1989 - 2007</h1>
     <p>The years 1989-2007 are available by year as PDF files:<br>
-        <a href="http://mediatum.ub.tum.de/?id=1191971">1989</a> <a
-            href="http://mediatum.ub.tum.de/?id=1191972">1990</a> <a
-            href="http://mediatum.ub.tum.de/?id=1191973">1991</a> <a
-            href="http://mediatum.ub.tum.de/?id=1191974">1992</a>
-        <a href="http://mediatum.ub.tum.de/?id=1191975">1993</a> <a
-            href="http://mediatum.ub.tum.de/?id=1191976">1994</a> <a
-            href="http://mediatum.ub.tum.de/?id=1191975">1995</a> <a
-            href="http://mediatum.ub.tum.de/?id=1191978">1996</a>
-        <a href="http://mediatum.ub.tum.de/?id=1191980">1997</a> <a
-            href="http://mediatum.ub.tum.de/?id=1191982">1998</a> <a
-            href="http://mediatum.ub.tum.de/?id=1197648">1999</a><br>
-        <a href="http://mediatum.ub.tum.de/?id=1197639">2000</a> <a
-            href="http://mediatum.ub.tum.de/?id=1197640">2001</a> <a
-            href="http://mediatum.ub.tum.de/?id=1197641">2002</a> <a
-            href="http://mediatum.ub.tum.de/?id=1197642">2003</a>
-        <a href="http://mediatum.ub.tum.de/?id=1197643">2004</a> <a
-            href="http://mediatum.ub.tum.de/?id=1197644">2005</a> <a
-            href="http://mediatum.ub.tum.de/?id=1197645">2006</a> <a
-            href="http://mediatum.ub.tum.de/?id=1197646">2007</a>
+        <a href="/1191971">1989</a> <a
+            href="/1191972">1990</a> <a
+            href="/1191973">1991</a> <a
+            href="/1191974">1992</a>
+        <a href="/1191975">1993</a> <a
+            href="/1191976">1994</a> <a
+            href="/1191975">1995</a> <a
+            href="/1191978">1996</a>
+        <a href="/1191980">1997</a> <a
+            href="/1191982">1998</a> <a
+            href="/1197648">1999</a><br>
+        <a href="/1197639">2000</a> <a
+            href="/1197640">2001</a> <a
+            href="/1197641">2002</a> <a
+            href="/1197642">2003</a>
+        <a href="/1197643">2004</a> <a
+            href="/1197644">2005</a> <a
+            href="/1197645">2006</a> <a
+            href="/1197646">2007</a>
     </p>
     <p>&nbsp;</p>
     <p><b>Years 1970 bis 1988:</b></p>
